# decbot_web

./: .dockerignore  .hgignore  Dockerfile  Pipfile  README.md  manage.py  pyproject.toml  setup.py
config/: apache2.conf  lighttpd.conf
decbot_web/: middleware.py  settings.py  settings_container.py  urls.py  views.py  wsgi.py
decbot_web/templates/: base.html
decbot_web/templates/karma/: score_detail.html  score_list.html
decbot_web/templates/quotes/: quote_detail.html
karma/: api.py  models.py  urls.py  views.py
karma/migrations/: 0001_initial.py
quotes/: api.py  models.py  serializers.py  test_quotes.py  urls.py  views.py
quotes/migrations/: 0001_initial.py
spa/: views.py
spa/static/spa/app/: decbot.js
spa/static/spa/css/: main.css
spa/static/spa/partials/: quote-list.html  quote-single.html  score-single.html  score-summary.html
spa/templates/spa/: index.html
sql/: 0.sql  1.sql
static/: index.html
static/app/: decbot.js
static/css/: angular.css  main.css  ns.css
static/partials/: quote-list.html  quote-single.html  score-single.html  score-summary.html
templates/: base.html
templates/karma/: score_detail.html  score_list.html
templates/quotes/: quote.html  quote_list.html
